syntax = "proto3";

// Package saturn.identity.v1 provides the Identity API for user management,
// authentication, and session handling.
package saturn.identity.v1;

import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/masterkeysrd/saturn/gen/proto/go/saturn/identity/v1;identitypb";

// Identity service for user management.
service Identity {
  option (google.api.default_host) = "api.saturn.masterkeysrd.dev";

  // CreateUser registers a new user identity with the system.
  //
  // This method is intended for explicit registration flows (e.g., "Sign Up"
  // with Email/Password). It ensures that the required profile information
  // (Name, Username) is provided upfront.
  //
  // Upon success, this method performs the following side effects:
  // 1. Creates the User resource in the Identity service.
  // 2. Links the provided credential (e.g., Password) to the user.
  // 3. Initializes the user's default context (e.g., Profile, Default Space).
  //
  // If the email or username is already taken, it returns an ALREADY_EXISTS error.
  rpc CreateUser(CreateUserRequest) returns (User) {
    option (google.api.http) = {
      post: "/v1/identity/users"
      body: "*"
    };
  }

  // GetUser retrieves a user by ID.
  // Use "me" to get the currently authenticated user.
  rpc GetUser(GetUserRequest) returns (User) {
    option (google.api.http) = {get: "/v1/identity/users/{id}"};
    option (google.api.method_signature) = "id";
  }

  // UpdateUser updates an existing user's information.
  // Use "me" to update the currently authenticated user.
  // Only the fields provided in the request will be updated.
  rpc UpdateUser(UpdateUserRequest) returns (User) {
    option (google.api.http) = {
      patch: "/v1/identity/users/{id}"
      body: "*"
    };
    option (google.api.method_signature) = "id,user,update_mask";
  }

  // LoginUser authenticates a user and establishes a new session.
  //
  // This method serves as the unified entry point for both traditional authentication
  // (Password) and federated login (Google, GitHub).
  //
  // Behavior depends on the authentication method provided:
  //
  // 1. Password:
  //    Strictly validates credentials. Returns UNAUTHENTICATED if invalid.
  //
  // 2. Social (Google, GitHub, etc.):
  //    Acts as a "Get or Create" operation.
  //    - If the identity exists: Logs the user in.
  //    - If the email exists but is not linked: Automatically links the account
  //      (only if the social email is verified).
  //    - If the user does not exist: Automatically registers a new User and
  //      Identity ("Just-in-Time" provisioning).
  //
  // Returns a TokenPair containing a short-lived Access Token (JWT) and a
  // long-lived Refresh Token.
  rpc LoginUser(LoginUserRequest) returns (TokenPair) {
    option (google.api.http) = {
      post: "/v1/identity/users:login"
      body: "*"
    };
  }

  // LogoutUser invalidates the current user's session.
  rpc LogoutUser(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/identity/users:logout"
      body: "*"
    };
  }

  // LogoutUserAll invalidates all sessions for the current user.
  rpc LogoutUserAll(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/identity/users:logoutAll"
      body: "*"
    };
  }

  // ListSessions lists all active sessions for the current user.
  rpc ListSessions(ListSessionsRequest) returns (ListSessionsResponse) {
    option (google.api.http) = {get: "/v1/identity/sessions"};
  }

  // RefreshSession refreshes a session using a refresh token.
  rpc RefreshSession(RefreshSessionRequest) returns (TokenPair) {
    option (google.api.http) = {
      post: "/v1/identity/sessions:refresh"
      body: "*"
    };
  }

  // RevokeSession revokes a specific session by ID.
  rpc RevokeSession(RevokeSessionRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {delete: "/v1/identity/sessions/{id}"};
    option (google.api.method_signature) = "id";
  }
}

// Request message for Identity.CreateUser.
message CreateUserRequest {
  // Email address of the user to be created.
  string email = 1 [(google.api.field_behavior) = REQUIRED];

  // Full name of the user to be created.
  string name = 2 [(google.api.field_behavior) = REQUIRED];

  // Username of the user to be created.
  string username = 3 [(google.api.field_behavior) = REQUIRED];

  // URL to the user's avatar image.
  string avatar_url = 4 [(google.api.field_behavior) = OPTIONAL];

  // Password for the user to be created.
  string password = 5 [(google.api.field_behavior) = REQUIRED];
}

// Request message for Identity.GetUser.
message GetUserRequest {
  // ID of the user to retrieve.
  // Use "me" to get the currently authenticated user.
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

message UpdateUserRequest {
  // ID of the user to update.
  // Use "me" to update the currently authenticated user.
  string id = 1 [(google.api.field_behavior) = REQUIRED];

  User user = 2 [(google.api.field_behavior) = REQUIRED];

  // The fields to be updated. If empty, all non-output fields are updated.
  // Use "*" to update all fields.
  google.protobuf.FieldMask update_mask = 3 [(google.api.field_behavior) = OPTIONAL];
}

// Request message for Identity.LoginUser.
message LoginUserRequest {
  // UserPassword authentication method.
  message UserPassword {
    // Username or email of the user.
    string identifier = 1 [(google.api.field_behavior) = REQUIRED];

    // Password of the user.
    // Required.
    string password = 2 [(google.api.field_behavior) = REQUIRED];
  }

  oneof method {
    // UserPassword authentication method.
    UserPassword user_password = 1 [(google.api.field_behavior) = REQUIRED];
  }
}

// Request message for Identity.ListSessions.
message ListSessionsRequest {
  // Requested page number (starting from 1).
  int32 page = 1;

  // Number of sessions to return per page.
  int32 page_size = 2;
}

// Response message for Identity.ListSessions.
message ListSessionsResponse {
  // List of sessions for the current user.
  repeated Session sessions = 1;

  // Total number of sessions available.
  int32 total_size = 2;
}

// Request message for Identity.RefreshSession.
message RefreshSessionRequest {
  // Refresh token to obtain a new JWT token.
  string refresh_token = 1 [(google.api.field_behavior) = REQUIRED];
}

// Request message for Identity.RevokeSession.
message RevokeSessionRequest {
  // ID of the session to be revoked.
  string id = 1 [(google.api.field_behavior) = REQUIRED];
}

// User represents a user in the identity service.
message User {
  // Unique identifier for the user.
  string id = 1 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Username of the user.
  string username = 2;

  // Email address of the user.
  string email = 3;

  // Full name of the user.
  string name = 4;

  // URL to the user's avatar image.
  optional string avatar_url = 5;

  // List of identity provider bindings linked to the user.
  repeated Binding bindings = 6 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Timestamp when the user was created.
  google.protobuf.Timestamp create_time = 7 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Timestamp when the user was last updated.
  google.protobuf.Timestamp update_time = 8 [(google.api.field_behavior) = OUTPUT_ONLY];
}

// Binding represents an identity provider linked to the user.
message Binding {
  enum Provider {
    // Unknown provider.
    PROVIDER_UNSPECIFIED = 0;

    // Password-based authentication.
    // Default option.
    VAULT = 1;
  }

  // The identity provider.
  // Default is PASSWORD.
  Provider provider = 1;

  // The unique identifier from the identity provider.
  // For PASSWORD provider, this is the user's email.
  string identifier = 2;

  // Display name for the integration.
  // Used for showing user-friendly names in the UI.
  string display_name = 3;

  // URL to the avatar image from the identity provider.
  string avatar_url = 4;
}

// Pair of JWT access token and refresh token.
message TokenPair {
  // JWT access token for authenticated requests.
  // Typically expires in 15 minutes.
  string token = 1;

  // Refresh token for obtaining new access tokens.
  // Typically expires in 7 days.
  string refresh_token = 2;

  // Expiration time of the access token.
  google.protobuf.Timestamp expires_at = 3 [(google.api.field_behavior) = OUTPUT_ONLY];
}

message Session {
  // Unique identifier for the session.
  string id = 1 [(google.api.field_behavior) = OUTPUT_ONLY];

  // User ID associated with the session.
  string user_id = 2 [(google.api.field_behavior) = OUTPUT_ONLY];

  // User agent string of the client.
  string user_agent = 3 [(google.api.field_behavior) = OUTPUT_ONLY];

  // IP address of the client.
  string ip_address = 4 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Timestamp when the session was created.
  google.protobuf.Timestamp create_time = 5 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Timestamp when the session was last accessed.
  google.protobuf.Timestamp last_access_time = 6 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Timestamp when the session will expire.
  google.protobuf.Timestamp expire_time = 7 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Indicates if the session is active.
  // A session is active if it has not expired or been revoked.
  bool is_active = 8 [(google.api.field_behavior) = OUTPUT_ONLY];
}
